--- a/src/features/recurringBills/components/css/recurring_bills_summary_card.css
+++ b/src/features/recurringBills/components/css/recurring_bills_summary_card.css
@@ -51,3 +51,14 @@
     height: 180px;
     }
 }
+
+@media(max-width: 424px){
+.recurring-bills-summary-card {
+    height: auto;
+    gap: 12px;
+}
+
+.recurring-bills-summary-card-content {
+    gap: 12px;
+}
+}
